# photonfeed

./: .env.example  .gitignore  README.md
api/: README.md  pyproject.toml
api/src/photonfeed/: cli.py  config.py  profile.py
api/src/photonfeed/db/: __init__.py  models.py  session.py
api/src/photonfeed/embed/: __init__.py  voyage.py
api/src/photonfeed/ingest/: __init__.py  pdf.py  walker.py
api/src/photonfeed/sources/: __init__.py  arxiv.py
docs/: architecture.md
infra/: README.md  docker-compose.yml
