[project]
name = "photonfeed"
version = "0.0.1"
description = "Multi-agent personalized photonics research feed"
readme = "README.md"
authors = [
    { name = "Zac Marra", email = "zacmar47@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "typer>=0.26.4",
]

[project.scripts]
photonfeed = "photonfeed.cli:app"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
